# Smartphone_controlled_esp32_caravan

./: .gitignore  CMakeLists.txt  README.md
components/bmi323_api/: CMakeLists.txt
main/: CMakeLists.txt  actuator_control.c  actuator_control.h  bmi323_port.c  bmi323_port.h  bmi323_sensor.c  bmi323_sensor.h  current_sensor.c  current_sensor.h  hcsr04_sensor.c  hcsr04_sensor.h  hdc1080_sensor.c  hdc1080_sensor.h  http_server.c  http_server.h  hx711.c  hx711.h  i2c_scanner.c  i2c_scanner.h  levelling.c  levelling.h  loadcell.c  lsm6dsox_sensor.c  lsm6dsox_sensor.h  main.c  vl6180x_sensor.c  vl6180x_sensor.h  wifi_ap.c
web/: index.html  index_test.html  synthetic_sensor_data.csv
